--- a/index.html
+++ b/index.html
@@ -195,7 +195,6 @@
         <br>
         <br>
 
-
         <form class="facebook-login-form">
             <input type="text" placeholder="Email Address or phone number">
             <input type="password" placeholder="Password">
@@ -204,6 +203,8 @@
             <hr>
             <a href="" class="create-account">Create new account</a>
         </form>
+
+        <span>{{ baby_show_price }}</span>
 
 
     </body>
